createinstance.tf
# GNU nano 7.2                                                                                         main.tf                                                                                          Modified
#Create a service o nthe cloud - launch an ec2 instance on aws
# HCL syntax key = value
# which part of aws
#provider "aws" {

 #       region="eu-west-1"
#}

# which service
#resource "aws_instance" "app_instance" {

# which ami
#       ami = "ami-02f0341ac93c96375"

# t2 micro
 #      instance_type ="t2.micro"

# assosciate public ip with this address
  #      associate_public_ip_address = true

# which controller (micro)
   #     tags = {
    #         Name = "joeod-terraform-tech258-app"
     #   }
#}
